--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.4
+  carousel_slider: ^4.2.1
   chips_choice: ^3.0.1
   cupertino_icons: ^1.0.6
   dio: ^5.4.3+1
@@ -37,7 +38,9 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.5
   flutter_svg: ^2.0.10+1
+  image_picker: ^1.1.2
   intl: ^0.19.0
+  path: ^1.9.0
   read_more_text: ^0.0.5
   shimmer: ^3.0.0
 
