--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.5
   flutter_svg: ^2.0.10+1
+  google_maps_flutter: ^2.7.0
   image_picker: ^1.1.2
   intl: ^0.19.0
   path: ^1.9.0
