--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.5
   flutter_svg: ^2.0.10+1
-  google_maps_flutter: ^2.7.0
+  geocoding: ^3.0.0
+  geolocator: ^12.0.0
+  google_maps_flutter: ^2.2.2
   image_picker: ^1.1.2
   intl: ^0.19.0
   path: ^1.9.0
