more and more editing to pages and add firebase

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,13 @@ environment:
 dependencies:
   bloc: ^8.1.4
   carousel_slider: ^4.2.1
+  mime: ^1.0.0
   chips_choice: ^3.0.1
   cupertino_icons: ^1.0.6
   dio: ^5.4.3+1
   dots_indicator: ^3.0.0
+  firebase_messaging: ^14.7.3
+  firebase_core: ^2.25.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
