--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,12 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.5
   flutter_svg: ^2.0.10+1
+  full_screen_image: ^2.0.0
   geocoding: ^3.0.0
   geolocator: ^12.0.0
   google_maps_flutter: ^2.2.2
   image_picker: ^1.1.2
   intl: ^0.19.0
-  
   jiffy: ^6.3.1
   lottie: ^3.1.2
   mime: ^1.0.0
