--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   dio: ^5.4.3+1
   dots_indicator: ^3.0.0
   firebase_core: ^2.25.5
+  sqflite: ^2.3.3+1
   firebase_messaging: ^14.7.3
   flutter:
     sdk: flutter
