--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   lottie: ^3.1.2
   mime: ^1.0.0
   path: ^1.9.0
+  rating_dialog: ^2.0.4
   read_more_text: ^0.0.5
   shared_preferences: ^2.2.3
   shimmer: ^3.0.0
