--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   full_screen_image: ^2.0.0
   geocoding: ^3.0.0
   geolocator: ^12.0.0
+  flutter_local_notifications: ^17.1.2
   google_maps_flutter: ^2.2.2
   image_picker: ^1.1.2
   intl: ^0.19.0
