--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   shared_preferences: ^2.2.3
   shimmer: ^3.0.0
   url_launcher: ^6.3.0
+  app_settings: ^5.0.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
